@@ -363,6 +363,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   automatically logs the user in with the new password after changing
   it; pulling from slave meant the record was often not the updated
   one.
+* (bug 8335) Set image width to the first valid parameter found.
 
 == Languages updated ==
 
